--- a/css/common.css
+++ b/css/common.css
@@ -13,7 +13,7 @@
   --font-basic: "Roboto Condensed", sans-serif;
   font-family: var(--font-basic);
   --color-menu: #808080;
-  --color-white: blue;
+  --color-white: #fff;
   --color-background-header: #f5f5f5;
 }
 
