--- a/css/main-page.css
+++ b/css/main-page.css
@@ -1,3 +1,25 @@
-.main-page {
-  background-image: url("../img/main-foto.jpg");
+.main__title {
+  background-image: url("../img/mobile-main-foto.jpg");
+  background-size: cover;
+  background-position: 20%;
+  background-repeat: no-repeat;
+  /* width: 100%; */
+  height: 100vh;
+}
+
+.title-bdsl {
+  color: var(--color-white);
+  padding: 30px;
+}
+
+@media (min-width: 991px) {
+  .main__title {
+    background-image: url("../img/main-foto.jpg");
+    background-position: center;
+    background-size: auto 500px;
+    
+  }
+  .title-bdsl {
+    display: none;
+  }
 }
