--- a/css/common.css
+++ b/css/common.css
@@ -14,7 +14,9 @@
   font-family: var(--font-basic);
   --color-menu: #808080;
   --color-white: #fff;
+  --color-smoke: #6d6b6b;
   --color-background-header: #f5f5f5;
+  --color-modal-btn: #f9b742;
 }
 
 ul {
