--- a/css/main-page.css
+++ b/css/main-page.css
@@ -1,15 +1,39 @@
 .main__title {
   background-image: url("../img/mobile-main-foto.jpg");
   background-size: cover;
-  background-position: 20%;
+  background-position: 10%;
   background-repeat: no-repeat;
-  /* width: 100%; */
   height: 100vh;
+  flex-direction: column;
+  
 }
 
 .title-bdsl {
   color: var(--color-white);
   padding: 30px;
+}
+
+
+
+.grid-name {
+  display: grid;
+  grid-template-columns: [first] 20px [line2] 135px;
+  margin: 30px 0 100px 30px;
+  font-size: 40px;
+  color:  var(--color-smoke);
+}
+
+.first-leter {
+  color: var(--color-white);
+}
+
+.modal-btn {
+  background-color: var(--color-modal-btn);
+  color: var(--color-white);
+  padding: 12px 30px;
+  margin: 100px 0 0 30px;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 991px) {
@@ -19,7 +43,8 @@
     background-size: auto 500px;
     
   }
-  .title-bdsl {
+  .title-bdsl,
+  .grid-name {
     display: none;
   }
 }
