--- a/css/header.css
+++ b/css/header.css
@@ -1,20 +1,27 @@
+body.lock {
+  overflow: hidden;
+}
+
 .header {
   background-color: var(--color-background-header);
+  height: 180px;
 }
 
 .header__navigation {
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   padding: 40px 20px;
 }
 
 .navigation__logo {
+  position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  z-index: 10;
 }
 
 .logo__img {
@@ -22,30 +29,51 @@
   border-radius: 50%;
 }
 
-.navigation__burger-menu-icon {
-  width: 25px;
-  height: 25px;
+.navigation__burger-menu-button {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  width: 25px;
+  height: 25px;
+  z-index: 5;
 }
 
-.navigation__burger-menu-icon:hover {
+.navigation__burger-menu-button:hover {
   cursor: pointer;
 }
 
 .burger__line {
+  
   height: 2px;
   background-color: var(--color-menu);
   transition: 300ms;
 }
 
-.navigation__burger-menu-icon:hover .burger__line {
+.navigation__burger-menu-button:hover .burger__line {
   background-color: var(--color-white);
+}
+
+.menu:hover {
+  color: var(--color-white);
 }
 
 .navigation__menu {
   display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-background-header);
+  z-index: 2;
+  transition: top 0.3s ease-in 0.1s;
+  
+}
+
+.navigation__menu.active {
+  top: 0;
 }
 
 .menu {
@@ -60,9 +88,32 @@
   transition: 0.35s;
 }
 
+.burger-menu-button.active .line-middle {
+  transform: scale(0);
+}
+
+.burger-menu-button.active .line-top {
+  margin-bottom: -20px;
+  transform: rotate(45deg);
+}
+
+.burger-menu-button.active .line-bottom {
+  margin-top: -30px;
+  transform: rotate(-45deg);
+}
+
+.show-menu {
+  transform: translateY(0);
+}
+
 @media (min-width: 991px) {
-  .navigation__burger-menu-icon {
+  .navigation__burger-menu-button {
     display: none;
+  }
+
+  .header__navigation {
+    display: flex;
+    align-items: center;
   }
 
   .navigation__menu {
