--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url(common.css);
 @import url(header.css);
+@import url(burger-menu.css);
 @import url(main-page.css);
 @import url(footer.css);
