--- a/css/header.css
+++ b/css/header.css
@@ -54,10 +54,6 @@ body.lock {
   background-color: var(--color-white);
 }
 
-.menu:hover {
-  color: var(--color-white);
-}
-
 .navigation__menu {
   display: none;
   flex-direction: column;
@@ -77,7 +73,7 @@ body.lock {
 }
 
 .menu {
-  padding-left: 20px;
+  padding: 15px 0 15px 20px;
   color: var(--color-menu);
   font-size: 25px;
   text-decoration: none;
