--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@ body.lock {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 40px 20px;
+  padding-top: 40px;
 }
 
 .navigation__logo {
@@ -21,6 +21,7 @@ body.lock {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px;
   z-index: 10;
 }
 
@@ -116,6 +117,6 @@ body.lock {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
   }
 }
