--- a/css/common.css
+++ b/css/common.css
@@ -13,7 +13,7 @@
   --color-white: #fff;
   --color-smoke: #6d6b6b;
   --color-background-header: #000000;
-  --color-background-main-page: #78001a;
+  --color-background-main-page: #d62c51;
   --color-modal-btn: #f9b742;
   font-family: var(--font-basic);
 }
