add margin to location__place

--- a/css/schedule-page.css
+++ b/css/schedule-page.css
@@ -119,6 +119,9 @@
 .dance-name{
     margin-left: 10px;
 } */
+.location__place{
+    margin-left: 10px;
+}
 
 .icon__place__color{
     margin: auto;
