--- a/css/schedule-page.css
+++ b/css/schedule-page.css
@@ -67,11 +67,11 @@
 }
 
 .dance-select__item:hover{
-    background-color: rgb(11, 202, 52);
+    background-color: var(--color-modal-btn);
 }
 
 .dance-select__item.active{
-    background-color: rgb(11, 202, 52);
+    background-color: var(--color-modal-btn);
 }
 
 .title__week{
