--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 @import url(common.css);
-@import url(header1.css);
+@import url(header.css);
 @import url(burger-menu.css);
 @import url(main-page.css);
 @import url(schedule-page.css);
